--- a/Tarea3_JuarezBryan.ipynb
+++ b/Tarea3_JuarezBryan.ipynb
@@ -38,9 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Resolver la siguiente ecuación recursiva usando funciones como se vió en clase\n",
+    "**1. Resolver la siguiente ecuación recursiva usando funciones como se vió en clase\n",
     "$$ D_{n}=(n-1) D_{n-1}+(n-1) D_{n-2} \\quad n\\ge 3$$\n",
-    "con $D_1=0$ y $D_2 = 1$"
+    "con $D_1=0$ y $D_2 = 1$**"
    ]
   },
   {
@@ -61,7 +61,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Count the number of spaces in the following string `variable =  relaciónn  requiere,  para obtener  el  valor  de un  cierto  término,  el conocimiento de los dos anteriores`."
+    "**2. Count the number of spaces in the following string `variable =  relaciónn  requiere,  para obtener  el  valor  de un  cierto  término,  el conocimiento de los dos anteriores`.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto = 'variable =  relaciónn  requiere,  para obtener  el  valor  de un  cierto  término,  el conocimiento de los dos anteriores'\n",
+    "texto.count(' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> La cantidad de espacios presentes en la cadena de texto propuesta es igual a **26**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Remove all of the vowels in a string [make a list of the non-vowels].**"
    ]
   },
   {
@@ -82,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Remove all of the vowels in a string [make a list of the non-vowels]."
+    "**4. Find all of the words in a string that are less than 4 letters.**"
    ]
   },
   {
@@ -103,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Find all of the words in a string that are less than 4 letters."
+    "**5. Use a dictionary comprehension to count the length of each word in a sentence.**"
    ]
   },
   {
@@ -124,28 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Use a dictionary comprehension to count the length of each word in a sentence."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solución."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6. Use a nested list comprehension to find all of the numbers from 1-1000 that are divisible by any single digit besides 1 (2-9). "
+    "**6. Use a nested list comprehension to find all of the numbers from 1-1000 that are divisible by any single digit besides 1 (2-9).** "
    ]
   },
   {
