--- a/Tarea3_JuarezBryan.ipynb
+++ b/Tarea3_JuarezBryan.ipynb
@@ -115,10 +115,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s',\n",
+       " 't',\n",
+       " 's',\n",
+       " 'l',\n",
+       " 'p',\n",
+       " 'r',\n",
+       " 'b',\n",
+       " 'p',\n",
+       " 'r',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'r',\n",
+       " 'v',\n",
+       " 'c',\n",
+       " 'l',\n",
+       " 's']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Definimos una lista con las vocales\n",
+    "vocales = ['a', 'e', 'i', 'o', 'u']\n",
+    "\n",
+    "# Definimos nuestra oracion sobre la cual evaluaremos\n",
+    "oracion_1 = 'Esto es la prueba para eliminar vocales'\n",
+    "\n",
+    "# Realizamos una comprension de lista donde se homogeniza nuestra cadena y se evalua la condicion.\n",
+    "[letra for letra in oracion_1.replace(' ', '').lower() if letra not in vocales]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Podemos observar como sí nos ayuda a eliminar las vocales de manera eficiente."
+   ]
   },
   {
    "cell_type": "markdown",
