--- a/Tarea3_JuarezBryan.ipynb
+++ b/Tarea3_JuarezBryan.ipynb
@@ -160,13 +160,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Podemos observar como sí nos ayuda a eliminar las vocales de manera eficiente."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**4. Find all of the words in a string that are less than 4 letters.**"
    ]
   },
@@ -179,10 +172,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['En', 'las', 'con', 'de']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Comenzamos definiendo nuestra oracion de prueba.\n",
+    "oracion_2 = 'En esta prueba discriminaremos las palabras con menos de cuatro letras'\n",
+    "\n",
+    "# Utilizamos una comprension de lista donde separamos la cadena de texto y evaluamos la condicion de longitud < 4.\n",
+    "[palabra for palabra in oracion_2.split() if len(palabra)<4]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +210,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Esta': 4,\n",
+       " 'es': 2,\n",
+       " 'la': 2,\n",
+       " 'oracion': 7,\n",
+       " 'de': 2,\n",
+       " 'prueba': 6,\n",
+       " 'donde': 5,\n",
+       " 'contaremos': 10,\n",
+       " 'longitud': 8,\n",
+       " 'cada': 4,\n",
+       " 'palabra': 7}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Definimos la cadena de texto de prueba.\n",
+    "oracion_3 = 'Esta es la oracion de prueba donde contaremos la longitud de cada palabra'\n",
+    "\n",
+    "# Utilizamos una comprension de diccionarios, donde por cada palabra le asignamos su respectiva longitud.\n",
+    "{p:l for p,l in zip(oracion_3.split(), [len(i) for i in oracion_3.split()])}"
+   ]
   },
   {
    "cell_type": "markdown",
