--- a/Tarea3_JuarezBryan.ipynb
+++ b/Tarea3_JuarezBryan.ipynb
@@ -52,10 +52,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importamos numpy, libreria a utilizar.\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definimos una funcion anidada que nos ayude a evaluar cada punto de la sucesion.\n",
+    "\n",
+    "def ecuacion_r(n:'Número de elementos a generar'):\n",
+    "    D = np.zeros(n)\n",
+    "    D[0] = 0\n",
+    "    D[1] = 1\n",
+    "        \n",
+    "    '''Comenzamos a escribir una nueva función que nos ayudará a generar los valores\n",
+    "        a partir de la siguiente sucesión:\n",
+    "            D_{n}=(n-1) D_{n-1}+(n-1) D_{n-2}'''\n",
+    "    def matrix(i):\n",
+    "        nonlocal D\n",
+    "        D[i] = i * ((D[i-1]) + (D[i-2]))\n",
+    "            \n",
+    "    '''Utilizamos una comprensión de lista para llenar la matriz'''\n",
+    "    [matrix(i) for i in range(2,n)]\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Evaluaremos para los primeros 15 elementos de la sucesión."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 1.00000000e+00, 2.00000000e+00, 9.00000000e+00,\n",
+       "       4.40000000e+01, 2.65000000e+02, 1.85400000e+03, 1.48330000e+04,\n",
+       "       1.33496000e+05, 1.33496100e+06, 1.46845700e+07, 1.76214841e+08,\n",
+       "       2.29079293e+09, 3.20711010e+10, 4.81066516e+11])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ecuacion_r(15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,16 +312,6 @@
    "metadata": {},
    "source": [
     "### Solución."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Comenzamos importando numpy.\n",
-    "import numpy as np"
    ]
   },
   {
